Save/load/reset functions

--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
             <div class="scoreContainer">
                 <span id="score">0</span> köz<br>
                 <span id="scorePS">0</span> köz/saniye<br>
-       
+ 
         </div>
         <br>
         <img src="images/sagop.jpg" onclick="clickY(clickPow)" style="height: 256px;"><br>
-
+        <button onclick="SaveGame();">Save Game</button>
+        <button onclick="LoadGame();">Load Game</button>
         <div class="sectionFooter">
             <h5>Sagopa Kajmer Köz Clicker v0.1</h5>
+            <button onclick="ResetGame();" style="background-color: coral;">Reset Game</button>
         </div>
-
+  
     </div>
 </center>
     <div class="sectionRight">
@@ -58,11 +60,13 @@
  
 
 <script src="scripts/counter.js">
+
 </script>
 </body>
 </html>
 
 <!--
     Kolerayı dövmeye git / Kırılan bel kemiği sayısı: 
-    Popçu 
+    Popçu sik
+    Fuatı dava et: Zükerin sound effect
 -->
